# gh-action_cache

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .tool-versions  CLAUDE.md  README.md  action.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json
.github/: CODEOWNERS  actionlint.yaml
__tests__/: auth.test.ts  cache-metrics.test.ts  cache-save-decision.test.ts  cache-save-main.test.ts  cache-save-post.test.ts  cache-save-skip.test.ts  cleanup-cache.test.sh  content-manifest.test.ts  credential-guard.test.ts  credential-setup-post.test.ts  credential-setup.test.ts  prepare-keys.test.ts  retry.test.ts  runs-on-save.test.ts  symlink-keeper.test.ts
cache-metrics/: action.yml
cache-save/: action.yml
ccache_s3_proxy/: __init__.py  handler.py  server.py
cleanup/: action.yml
credential-guard/: action.yml
credential-setup/: action.yml
s3-cache-save/: action.yml
scripts/: cache-credential-process.sh  cleanup-cache.sh  get-aws-credentials.sh  get-github-token.sh  prepare-keys.sh  refresh-runs-on-save.sh
src/: auth.ts  cache-metrics-main.ts  cache-metrics-post.ts  cache-metrics.ts  cache-save-decision.ts  cache-save-main.ts  cache-save-post.ts  cache-save-skip.ts  content-manifest.ts  credential-guard-main.ts  credential-guard-post.ts  credential-setup-post.ts  credential-setup.ts  main.ts  post.ts  retry.ts  runs-on-save.ts  s3-cache-save-main.ts  s3-cache-save-post.ts  symlink-keeper-main.ts  symlink-keeper-post.ts  types.ts
src/auth/: index.ts  (+2 more)
symlink-keeper/: action.yml
tests/: __init__.py  test_handler.py  test_server.py
(+17 files in other folders)
